   Sniffer should no longer spin CPU when idle.

   Reworked HttpPluginSnifferFilter:
	- Outputs a full usable test script.
	- Copes with POST data split across TCP packets.
	- Fixed bug where POST with multiple lines was read incorrectly,
	  this required moving to Jakarta ORO because Jakarta Regexp
	  bombed with a trivial regexp.
	- Removed multipart form handling.

   (A note is necessary on the multipart form handling. The more I
   looked at the existing support in the sniffer, the more dubious it
   looked. Here's what the HTTP specification says on the subject:

	"In general, HTTP treats a multipart message-body no
	differently than any other media type: strictly as payload.
	The one exception is the "multipart/byteranges" type ..."

   This means that the sniffer should just chuck the data directly
   into the POST file, which is what it now does. And no Cynthia, we
   do not support multipart/byteranges.)

   Other miscellaneous fixes and documentation.


Grinder 2.8.2
-------------

   The Grinder is now released under a BSD style license.

   New UI showing worker process status from Dirk Feufel.

   Fix console communication bug where socket reader threads would
   sleep each time a dead socket handle was polled.

   Fix SocketPlugin bug where multiple request files were incorrectly
   handled. Thanks to Hussein Badakhchani for the report.


Grinder 2.8.1
-------------

   Communication from the worker processes to the Console now uses a
   unicast TCP connection. Multicast has been used here since the
   beginning (it was cheap and cheerful to implement) but caused
   several problems:
	- Under heavy load, multicast packets are lost.
	- I've had a report of multicast packets being duplicated.

   Clearly neither of these are good for statistics reporting. Signals
   from the Console to the worker processes still use multicast.

   IMPORTANT: The communication properties have changed, you must set
   the following in grinder.properties:
